@@ -8,27 +8,27 @@
 		http://www.springframework.org/schema/util http://www.springframework.org/schema/util/spring-util.xsd		
 		http://www.springframework.org/schema/osgi-compendium http://www.springframework.org/schema/osgi-compendium/spring-osgi-compendium.xsd">
 
-	<!-- osgix:managed-service -->
+	<!-- osgix:managed-properties -->
 	<bean id="simple" class="org.springframework.osgi.compendium.OneSetter">
-		<osgix:managed-service persistent-id="simple"/>
+		<osgix:managed-properties persistent-id="simple"/>
 		<property name="clz" value="java.lang.Object"/>
 	</bean>
 	
 	<bean class="org.springframework.osgi.compendium.OneSetter">
-		<osgix:managed-service persistent-id="non-name"/>
+		<osgix:managed-properties persistent-id="non-name"/>
 	</bean>
 	
 	<bean id="simpleWUpdate" class="org.springframework.osgi.compendium.OneSetter">
-		<osgix:managed-service persistent-id="simple" update-strategy="container-managed"/>
+		<osgix:managed-properties persistent-id="simple" update-strategy="container-managed"/>
 	</bean>
 	
 	<bean id="multipleWUpdate" class="org.springframework.osgi.compendium.MultipleSetters">
-		<osgix:managed-service persistent-id="multiple" update-strategy="container-managed"/>
+		<osgix:managed-properties persistent-id="multiple" update-strategy="container-managed"/>
 		<property name="integer" value="23"/>
 	</bean>
 
 	<bean id="beanManaged" class="org.springframework.osgi.compendium.BeanManaged">
-		<osgix:managed-service persistent-id="bean-managed" update-strategy="bean-managed" update-method="update"/>
+		<osgix:managed-properties persistent-id="bean-managed" update-strategy="bean-managed" update-method="update"/>
 		<property name="integer" value="23"/>
 	</bean>
 	
