@@ -8,7 +8,7 @@
 		http://www.springframework.org/schema/util http://www.springframework.org/schema/util/spring-util.xsd		
 		http://www.springframework.org/schema/osgi-compendium http://www.springframework.org/schema/osgi-compendium/spring-osgi-compendium.xsd">
 
-	<!-- osgix:managed-service -->
+	<!-- osgix:cm-properties -->
 	<osgix:cm-properties id="simple" persistent-id="simple"/>
 	
 	<osgix:cm-properties id="override" persistent-id="override" local-override="true">
